# Tabella

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  lefthook.yml  mock_data.sql  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docker.yml
.sqlx/: query-1e5f3f4ea307063f0643d5a5261a39736bd784663a0a66783be59efa8d06bf07.json  query-330e10f851cab1b03575b78f257d33c178818298a8fde42175c78553603aee5f.json  query-59e1316b924ed1b5966a5b03fd7b8dba50dfddf0cdaa47168577e4d04a0345ad.json  query-aef5774466dbc3a4c63a5804c0e53a81dfc816533152ec02b89ab5a382578d62.json  query-b510629da6cffcbfaa6332aed6020a72004cfdb9fa563d24de11048bba724b1a.json
apps/api/: Cargo.toml
apps/api/migrations/: 0001_init.sql  0002_add_source_type.sql  0003_alter_status.sql  0004_add_editor_role.sql  0005_add_user_avatar.sql  0006_create_settings.sql  0007_create_download_jobs.sql  0008_add_image_uploader.sql  0009_add_error_contract_fields.sql  0010_cleanup_orphan_tags.sql  0011_perf_indexes.sql
apps/api/src/: api.rs  auth.rs  config.rs  dto.rs  image_processor.rs  import_worker.rs  main.rs  tags.rs
apps/api/src/api/: auth_handlers.rs  downloads.rs  error.rs  error_codes.rs  events.rs  guards.rs  health.rs  images.rs  imports.rs  mod.rs  profile.rs  settings.rs  users.rs
apps/api/src/tasks/: archive.rs  cleanup.rs  mod.rs
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
apps/web/scripts/: check-error-codes.mjs
apps/web/src/: App.tsx  app-shell.tsx  i18n.ts  i18next.d.ts  index.css  main.tsx  theme.ts  types.ts
apps/web/src/auth/: auth-provider.tsx  route-guards.tsx
apps/web/src/components/: ReloadPrompt.tsx  about-dialog.tsx  advanced-search-dialog.tsx  fullscreen-state.tsx  gallery-card.tsx  gallery-grid-layout.tsx  gallery-header.tsx  lazy-image.tsx  lightbox-viewer-info.tsx  lightbox-viewer.tsx  search-bar.tsx  selection-action-bar.tsx  settings-dialog.tsx  top-bar-controls.tsx  top-navigation.tsx  use-gallery-virtualizer.ts  user-dialog.tsx
apps/web/src/gallery/: gallery-preferences-store.ts  gallery-session-store.ts  gallery-ui-provider.tsx
apps/web/src/hooks/: use-download-tracker.ts  use-gallery-query.ts  use-server-events.ts  use-tag-suggestions.ts
apps/web/src/lib/: api-error-codes.ts  api.ts  constants.ts  query-keys.ts  routes.ts  tags.ts
apps/web/src/locales/: en.json  zh-CN.json
apps/web/src/mocks/: gallery.ts
apps/web/src/pages/: admin-imports-page.tsx  admin-server-page.tsx  admin-users-page.tsx  gallery-page.tsx  login-page.tsx  not-found-page.tsx  profile-page.tsx  statistics-page.tsx
crates/tagger-cli/: Cargo.toml  README.md  inspect_labels.rs
crates/tagger-cli/src/: cli.rs  lib.rs  main.rs  model.rs  predict.rs  scan.rs  sidecar.rs
deploy/: Caddyfile.example
deploy/env/: tabella-api.env.example
deploy/systemd/: tabella-api.service
docs/: api-reference-zh.md  api-reference.md  docker-deployment-zh.md  docker-deployment.md  manual-deployment-zh.md  manual-deployment.md  v1-architecture.md
