[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "query"] }
dotenvy = "0.15.7"
hex = "0.4.3"
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust = "0.6.1"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5.0"
webp = "0.3.1"
zip = "8.6.0"
