[package]
name = "tagger-cli"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"] }
image = "0.25.8"
ndarray = "0.17"
ort = "2.0.0-rc.12"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
